# PlainSpeak

./: README.md  api.py  pyproject.toml
routers/: __init__.py  example.py
