[project]
name = "plainspeak"
version = "1.0.0"
description = "PlainSpeak API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = []

[tool.uv]
dev-dependencies = []
